@@ -1,3 +1,6 @@
+2011-05-20
+ * Meade LX200 driver split from generic LX200
+
 2011-05-18
  * inotify for constraints
 
